Finished lab changes

--- a/index.ipynb
+++ b/index.ipynb
@@ -109,8 +109,7 @@
     "# Get this from the \"Manage App\" page. Make sure you set them\n",
     "# back to None before pushing this to GitHub, since otherwise\n",
     "# your credentials will be compromised\n",
-    "api_key = \"Z_kLCU1xW5of0_jhhBViwiBdTn1zlwxSZq4AMHTCVa0nrvswYBZLSWmJBMP8u3-HUcvwdXEn3cMeVoOZ7rFkWnzL9h-vwADliHN3-zLRruH8O2hckpedAU07gOloZXYx\"\n",
-    "\n",
+    "api_key = None\n",
     "# These can be whatever you want! But the solution uses \"pizza\"\n",
     "# and \"New York NY\" if you want to compare your work directly\n",
     "term = \"pizza\"\n",
